cluster/k3s/gateway/public-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway

metadata:
  name: public-gateway
  namespace: gateway-system

spec:
  gatewayClassName: traefik

  listeners:
    - name: http
      protocol: HTTP
      port: 80

      allowedRoutes:
        namespaces:
          from: All

    - name: https
      protocol: HTTPS
      port: 443

      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: public-tls

      allowedRoutes:
        namespaces:
          from: All
